--- a/dixxon.html
+++ b/dixxon.html
@@ -159,7 +159,7 @@
 
           <div class="link">
             <h4>Legal</h4>
-            <a href=file:///C:/Users/iandu/Untitled.-3.html>Privacy Policy</a>
+            <a href="C:\Users\iandu\Dev\dixxon\Untitled.-3.html">Privacy Policy</a>
             <a href="#">Term of Use</a>
             <a href="#">Conditions</a>
             <a href="#">Location</a>
